Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97925

ProgressiveAA does not work if there are PrincipledMaterials in scene

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.3, 6.3.0 Alpha
    • 6.2.1
    • Quick: 3D
    • None
    • 1e9d4b64d6 (qt/qtquick3d/dev) 885f633e80 (qt/qtquick3d/6.3) 9f27a142b8 (qt/qtquick3d/6.2) 9f27a142b8 (qt/tqtc-qtquick3d/6.2) 885f633e80 (qt/tqtc-qtquick3d/6.3) 9f27a142b8 (qt/tqtc-qtquick3d/6.2.3) 9f27a142b8 (qt/tqtc-qtquick3d/6.2.4)
    • Qt Quick 3D: Week 44-45, Qt Quick 3D: Week 1 - 2

      If there's even one model with a PrincipledMaterial in a scene in View3D, then ProgressiveAA antialiasing does nothing anymore.

      Easily tested with antialiasing example, by replacing one of the materials with PrincipledMaterial, for example:

                  Model {
                      source: "#Cube"
                      eulerRotation.y: 45
                      eulerRotation.x: 30 + view3D.animationValue * 100
                      scale: Qt.vector3d(2, 2, 2)
                      materials: PrincipledMaterial {
                          baseColor: "#4aee45"
                      }
      //                materials: DefaultMaterial {
      //                    diffuseColor: "#4aee45"
      //                }
                  } 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tuliniemi Jere Tuliniemi
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes