Fix Progressive AA with principled materials

Pick-to: 6.2 6.3
Fixes: QTBUG-97925
Change-Id: Ib63557d967a8ed0b69b9ecb8f7d0446e6cebc347
Reviewed-by: Andy Nichols <andy.nichols@qt.io>